# hl_monitoring

./: CMakeLists.txt  package.xml  wks.yml
include/hl_monitoring/: calibrated_image.h  field.h  image_provider.h  manual_pose_solver.h  monitoring_manager.h  replay_image_provider.h  replay_viewer.h  team_config.h  team_manager.h  top_view_drawer.h  utils.h
include/hl_monitoring/drawers/: arrow_drawer.h  captain_drawer.h  drawer.h  player_drawer.h  pose_drawer.h  position_drawer.h  team_drawer.h  text_drawer.h
include/hl_monitoring/gtkmm/: dialogs.h  image_widget.h  multi_camera_widget.h  replay_widget.h  video_controller.h
proto/: camera.proto
resources/: adult_auto.json  kid_auto.json  teams.json
src/hl_monitoring/: calibrated_image.cpp  field.cpp  flycap_image_provider.cpp  flycap_image_provider.h  image_provider.cpp  manual_pose_solver.cpp  monitoring_manager.cpp  multi_camera_widget.cpp  opencv_image_provider.cpp  replay_image_provider.cpp  replay_image_provider.h  replay_viewer.cpp  sources.cmake  team_config.cpp  team_manager.cpp  team_manager.h  top_view_drawer.cpp  utils.cpp
src/hl_monitoring/drawers/: arrow_drawer.cpp  arrow_drawer.h  captain_drawer.cpp  captain_drawer.h  geometry.cpp  geometry.h  player_drawer.cpp  player_drawer.h  pose_drawer.cpp  position_drawer.cpp  sources.cmake  team_drawer.cpp  text_drawer.cpp
src/hl_monitoring/gtkmm/: dialogs.cpp  image_widget.cpp  multi_camera_widget.cpp  replay_widget.cpp  sources.cmake  video_controller.cpp
tools/: basic_monitoring.cpp  intrinsic_calibration.cpp  meta_information_tool.cpp  static_calibration.cpp  test_gtkmm.cpp
